Fix alignment for avatar in sidebar

--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -186,3 +186,7 @@
   background-repeat: repeat;
   background-image: url('data:image/svg+xml;utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 width=%222000%22 height=%221000%22%3E%3Cg filter=%22url(%23a)%22%3E%3Cpath fill=%22%23333%22 d=%22M-1000-500h4000v2000h-4000z%22%2F%3E%3Cpath d=%22M845-179-280 181l268 955 1105-294%22 fill=%22%236FC%22%2F%3E%3Cpath d=%22M1216-78 310 822l112 311L1411 6%22 fill=%22%236FC%22%2F%3E%3Cpath d=%22m1234 160-326 845 482 889 1115-702%22 fill=%22%23333%22%2F%3E%3Cpath d=%22m510 220-928 819 1465 512 12-916%22 fill=%22%23f8ff6a%22%2F%3E%3Cpath d=%22M1371 738 400 982l871 1330 650-1189%22 fill=%22%236FC%22%2F%3E%3Cpath d=%22m1279 849-446 496 1028 1066 429-463%22 fill=%22%23f8ff6a%22%2F%3E%3C%2Fg%3E%3Cdefs%3E%3Cfilter id=%22a%22 x=%22-200%22 y=%22-200%22 width=%222400%22 height=%221400%22 filterUnits=%22userSpaceOnUse%22 color-interpolation-filters=%22sRGB%22%3E%3CfeFlood flood-opacity=%220%22 result=%22BackgroundImageFix%22%2F%3E%3CfeBlend in=%22SourceGraphic%22 in2=%22BackgroundImageFix%22 result=%22shape%22%2F%3E%3CfeGaussianBlur stdDeviation=%22200%22 result=%22effect1_foregroundBlur_1_2%22%2F%3E%3C%2Ffilter%3E%3C%2Fdefs%3E%3C%2Fsvg%3E');
 }
+
+.force-override[data-collapsible='icon'] {
+  padding: 0.25rem !important;
+}
